# igloo-ansible

./: .gitignore  .gitmodules  Pipfile  README.md  bootstrap.sh  clickable.yaml  clickables.py  clickables.yml  environment.yml  invoke.yaml  pyproject.toml  requirements.yml  tasks.py
bootstrap/: bootstrap.sh  environment.yml  pyproject.toml
dependencies/: requirements.yml
docs/source/: conf.py  index.rst  introduction.rst
etc/: ansible.cfg
igloo_ansible/: __init__.py
inventory/: ansible.cfg  hosts
inventory/group_vars/all/: 00-igloo-private.yml  00-igloo.yml  01-igloo-extra.yml  01-igloo-minimal.yml  50-application.yml  authorized_keys.yml  common.yml  extra.yml  minimal.yml
inventory/group_vars/debian/: 00-igloo-debian.yml
inventory/group_vars/vagrant/: 00-igloo-vagrant.yml  common.yml
inventory/host_vars/: virtual-machine.address
playbooks/: all.yml  igloo-playbooks  vagrant-up.yml
playbooks/igloo-playbooks/: full.yml  restore.yml
playbooks/igloo-playbooks/include/: ansible-prepare.yml  application.yml  build.yml  common.yml  debug.yml  gitlab-cd.yml  network.yml  stack.yml  vagrant.yml
