[tool.poetry]
name = "igloo_ansible"
# this is a fake/unused version
version = "0.1.0"
description = ""
authors = ["clickable <clickable@fake.tld>"]

[tool.poetry.dependencies]
python = ">=3.5"
clickable = { git = "https://github.com/lalmeras/clickable.git", branch = "dev" }
clickable_ansible = { git = "https://github.com/lalmeras/clickable_ansible.git", branch = "master" }
clickable_igloo = { git = "https://github.com/igloo-project/clickable_igloo.git", branch = "master" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
igloo-ansible = "clickable.click:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


